# erni-ki

./: .checkov.yml  .coderabbit.yaml  .coveragerc  .cspellrc.json  .env.example  .gitignore  .gitleaks.toml  .golangci.yml  .lychee.toml  .markdownlint-cli2.jsonc  .markdownlint.json  .mcp.json  .metadata-template.md  .pre-commit-config.yaml  .prettierignore  .prettierrc  .prettierrc.json  .secrets.baseline  .snyk  .test-generation-summary.txt  .yamllint  .yamllint.yml  AGENT-RULES.md  AGENTS.md  AUDIT-FILES-INDEX.md  AUDIT-SUMMARY-2025-12-03.txt  BUN-EXPERIMENT-README.md  CHANGELOG.md  CLAUDE.md  COMMIT_MESSAGE.txt  CONTRIBUTING.md  DOCUMENTATION_AUDIT_REPORT.md  EFFICIENCY_REPORT.md  INVESTOR-PRESENTATION-CHECKLIST.md  LOG_AUDIT_REPORT.md  MIGRATION-CHECKLIST.md  Makefile  Makefile.scripts  PRE-COMMIT-AUDIT-SUMMARY.txt  PRE-COMMIT-REFACTORING-INDEX.md  (+43 more)
.claude/: rag-docs-llm.md
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md  settings.yml  trivy.ignore  zap-rules.tsv
.husky/: commit-msg  pre-commit
.pre-commit/: config-docs.yaml  config-fast.yaml  config-full.yaml  config-security.yaml
auth/: Dockerfile  go.mod  go.sum  main.go  main_test.go
automation/: amtool-silence-plan.md
compose/: README.md  ai.yml  base.yml  data.yml  gateway.yml  mac.override.yml  monitoring.yml
conf/: Dockerfile.rag-exporter  README.md  rag_exporter.py
config/: archon-knowledge-sources.yaml
docs/: ACADEMY-KI-ERNI-GRUPPE-EXECUTIVE-SUMMARY.md  AUDIT-FILES-INDEX.md  AUDIT-README.md  BUN-EXPERIMENT-README.md  DOCUMENTATION-AUDIT-AND-REFACTORING-PLAN-2025-12-04.md  DOCUMENTATION-AUDIT-EXECUTIVE-SUMMARY.md  DOCUMENTATION-AUDIT-INDEX-2025-12-04.md  FINAL-SUMMARY-ERNI-ADAPTATION-2025-12-04.md  GLOSSARY.md  INDEX-ERNI-ADAPTATION.md  INVESTOR-PITCH-SUMMARY.md  INVESTOR-PRESENTATION-CHECKLIST.md  LETSENCRYPT-QUICK-START.md  MIGRATION-CHECKLIST.md  PHASE1-PROGRESS-REPORT-2025-12-04.md  PHASE1-SESSION2-PROGRESS-2025-12-04.md  PHASE1-SESSION3-FINAL-REPORT-2025-12-04.md  PHASE1-SESSION4-COMPLETION-REPORT-2025-12-04.md  PRE-COMMIT-REFACTORING-INDEX.md  QUICK-START-SSL.md  VERSION  VERSION.md  VERSION.yaml  budget-analysis.md  index.md  log-audit-2025-11-14-repeat.md  log-audit-2025-11-14.md  overview.md  versions.json  visuals_targets.json
env/: alertmanager.example  auth.example  backrest.example  blackbox-exporter.example  cadvisor.example  cloudflared.example  db.example  docling.example  edgetts.example  fluent-bit.example  grafana.example  health-monitor.env.example  health-monitor.example  litellm.example  mac.example  mcposerver.example  node-exporter.example  nvidia-exporter.example  ollama.example  openwebui.example  postgres-exporter.example  prometheus.example  ragflow-adapter.example  redis.example  searxng.example  tika.example  uptime-kuma.example  watchtower.example  webhook-receiver.example
prompts/: audit-report-ru.md  audit-ru.md  audit.md
scripts/: README.md  add-missing-frontmatter.py  audit_network_environment.py  cleanup-backups.sh  cleanup-logs.sh  erni-ki-health-check.sh  fix-deprecated-metadata.py  health-monitor-v2.sh  health-monitor.sh  integration-test.sh  language-check.cjs  (+15 more)
(+1170 files in other folders)
